| Bug #922 | comparison problem in subquery | ||
|---|---|---|---|
| Submitted: | 25 Jul 2003 0:34 | Modified: | 1 Aug 2003 7:29 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 4.1 | OS: | Any (any) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[25 Jul 2003 0:34]
Oleksandr Byelkin
[29 Jul 2003 3:03]
Oleksandr Byelkin
it was memory overrun ChangeSet 1.1589 03/07/29 13:00:32 bell@sanja.is.com.ua +10 -0 count HAVING clause elements with select list elements, because agregate function can be present in it (BUG#922) removerd unused loop_id
