count HAVING clause elements with select list elements, because agregate function can be present in it (BUG#922) removerd unused loop_id

mysql-test/r/subselect.result:
  test of BUG#922
mysql-test/t/subselect.test:
  test of BUG#922
sql/item.cc:
  removerd unused loop_id
  we need count HAVING clause elements, because agregate function can be present in it
sql/item.h:
  removerd unused loop_id
sql/item_subselect.cc:
  new name of field
sql/sql_derived.cc:
  new name of field
sql/sql_lex.cc:
  new name of field
sql/sql_lex.h:
  new name of field
sql/sql_select.cc:
  new name of field
sql/sql_union.cc:
  new name of field